insert figma, fix nap container size, fix menu collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,17 +23,41 @@ h1 {
 .navbar-toggler {
     margin-right: 1rem;
 }
-.login-btn {
-  float: right;
+.form-group {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	min-width: 300px;
+	max-width: 500px;
 }
-/* @media (max-width: 576px) {
+.btn-container {
+	display: flex;
+	justify-content: center;
+}
+.login-btn {
+  
+}
+.figma-embed {
+	position: relative;
+	width: 100%;
+	padding-bottom: 75%; /* Adjust the aspect ratio as needed */
+}
+
+.figma-embed iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+@media (max-width: 576px) {
     .navbar-collapse {
         position: fixed;
         top: 56px;
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: var(--bg-dark);
+        background-color: var(--primary-black);
         z-index: 11;
         display: none;
       }
@@ -47,4 +71,4 @@ h1 {
       .nav-link {
         font-size: 1.75rem;
       }
-} */
+}
